--- a/app/src/main/res/drawable/icon2_seclector.xml
+++ b/app/src/main/res/drawable/icon2_seclector.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item android:state_selected="true" android:drawable="@mipmap/ic_money_blue"/>
-    <item android:state_selected="false" android:drawable="@mipmap/ic_money_grey"/>
+<item android:state_selected="true" android:drawable="@mipmap/ic_face_white_24dp"/>
+    <item android:state_selected="false" android:drawable="@mipmap/ic_face_grey"/>
 </selector>
