--- a/app/src/main/res/layout/activity_changeperson.xml
+++ b/app/src/main/res/layout/activity_changeperson.xml
@@ -8,13 +8,24 @@
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/holo_blue_light">
 
-        <TextView
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="编  辑"
-            android:textColor="@android:color/white"
-            android:textSize="18sp" />
+            android:paddingLeft="8dp"
+            android:layout_height="match_parent">
+            <ImageView
+                android:src="@mipmap/toolbarbk"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:gravity="center"
+                android:text="记 忆 +"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"/>
+        </FrameLayout>
     </android.support.v7.widget.Toolbar>
 <RelativeLayout
     android:orientation="horizontal"
