--- a/app/src/main/res/layout/activity_eachmonth.xml
+++ b/app/src/main/res/layout/activity_eachmonth.xml
@@ -7,13 +7,39 @@
         android:background="@android:color/holo_blue_light"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
-        <TextView
+        <FrameLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="记 忆 +"
-            android:textSize="18sp"
-            android:textColor="@android:color/white"/>
+            android:paddingLeft="8dp"
+            android:layout_height="match_parent">
+            <ImageView
+                android:src="@mipmap/toolbarbk"
+                android:layout_gravity="center"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="记 忆 +"
+                android:textSize="18sp"
+                android:textColor="@android:color/white"/>
+        </FrameLayout>
+
     </android.support.v7.widget.Toolbar>
-<include layout="@layout/list_layout"/>
+    <android.support.v4.widget.SwipeRefreshLayout
+
+        android:id="@+id/swipeLayout"
+        android:orientation="vertical"
+        android:layout_gravity="center"
+        android:background="@drawable/linearborder"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/list_view"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp"
+                android:layout_marginBottom="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
