--- a/app/src/main/res/layout/fragment_shouye.xml
+++ b/app/src/main/res/layout/fragment_shouye.xml
@@ -25,7 +25,7 @@
                 android:layout_height="50dp" />
             <TextView
                 android:text="记笔记"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="14sp" />
@@ -45,7 +45,7 @@
                 android:text="分类"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:textSize="14sp" />
         </LinearLayout>
 
@@ -64,7 +64,7 @@
                 android:text="账本"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:textSize="14sp"/>
         </LinearLayout>
         <LinearLayout
@@ -81,7 +81,7 @@
             <TextView
                 android:text="备忘"
                 android:textSize="14sp"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
@@ -99,12 +99,11 @@
             <TextView
                 android:text="倒计时"
                 android:textSize="14sp"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
     </LinearLayout>
-
 
 <android.support.v4.widget.SwipeRefreshLayout
 
@@ -114,8 +113,9 @@
     android:background="@drawable/linearborder"
     android:layout_marginLeft="20dp"
     android:layout_marginRight="20dp"
+    android:layout_marginTop="10dp"
     android:layout_width="match_parent"
-    android:layout_height="220dp">
+    android:layout_height="280dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:orientation="vertical"
