--- a/app/src/main/res/layout/tab_custom.xml
+++ b/app/src/main/res/layout/tab_custom.xml
@@ -2,16 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="0dp"
     >
     <ImageView
         android:id="@+id/img_tab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
         android:layout_gravity="center"
         />
 
     <TextView
         android:id="@+id/tv_tab"
+        android:layout_marginTop="0dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
