--- a/app/src/main/res/drawable/edittext_selector.xml
+++ b/app/src/main/res/drawable/edittext_selector.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-  <solid android:color="#FFFFFF"/>
+  <solid android:color="#3fffffff"/>
     <corners android:radius="10dip"/>
     <stroke
         android:width="1dip"
