--- a/app/src/main/res/drawable/linearborder.xml
+++ b/app/src/main/res/drawable/linearborder.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!--solid为背景-->
-  <solid android:color="#ffffff"/>
+  <solid android:color="#3fffffff" />
     <!--<stroke-->
         <!--android:width="1dp"-->
         <!--android:color="#bfbfbf"/>-->
@@ -9,4 +9,5 @@
         android:topRightRadius="11dp"
         android:bottomLeftRadius="11dp"
         android:bottomRightRadius="11dp"/>
+
 </shape>
