--- a/app/src/main/res/layout/activity_eachmonth.xml
+++ b/app/src/main/res/layout/activity_eachmonth.xml
@@ -1,29 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/newbk">
     <android.support.v7.widget.Toolbar
         android:id="@+id/tb_eachmonth"
-        android:background="@android:color/holo_blue_light"
+        android:background="#2fffffff"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_height="match_parent">
-            <ImageView
-                android:src="@mipmap/toolbarbk"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="记 忆 +"
+                android:text="每月账单"
                 android:textSize="18sp"
                 android:textColor="@android:color/white"/>
-        </FrameLayout>
 
     </android.support.v7.widget.Toolbar>
     <android.support.v4.widget.SwipeRefreshLayout
@@ -31,7 +22,7 @@
         android:id="@+id/swipeLayout"
         android:orientation="vertical"
         android:layout_gravity="center"
-        android:background="@drawable/linearborder"
+        android:background="@android:color/transparent"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
             <android.support.v7.widget.RecyclerView
