--- a/app/src/main/res/layout/activity_edittext.xml
+++ b/app/src/main/res/layout/activity_edittext.xml
@@ -2,20 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@mipmap/newbk"
     xmlns:toolbar="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
-       android:background="@android:color/holo_blue_light"
+       android:background="#2fffffff"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
-       <FrameLayout
-           android:layout_width="wrap_content"
-           android:paddingLeft="8dp"
-           android:layout_height="match_parent">
-           <ImageView
-               android:src="@mipmap/toolbarbk"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
@@ -24,7 +17,6 @@
                android:textSize="18sp"
                android:textColor="@android:color/white"/>
 
-       </FrameLayout>
    </android.support.v7.widget.Toolbar>
     <com.rengwuxian.materialedittext.MaterialEditText
         android:id="@+id/et_notetitle"
