--- a/app/src/main/res/layout/activity_zhangben.xml
+++ b/app/src/main/res/layout/activity_zhangben.xml
@@ -1,20 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/newbk"
+    android:fitsSystemWindows="true">
     <android.support.v7.widget.Toolbar
         android:id="@+id/tb_zhangben"
-        android:background="@android:color/holo_blue_light"
+        android:background="#2fffffff"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_height="match_parent">
-            <ImageView
-                android:src="@mipmap/toolbarbk"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -23,7 +17,7 @@
                 android:textSize="18sp"
                 android:textColor="@android:color/white"/>
 
-        </FrameLayout>
+
     </android.support.v7.widget.Toolbar>
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeLayout"
