--- a/app/src/main/res/layout/item_money.xml
+++ b/app/src/main/res/layout/item_money.xml
@@ -2,11 +2,11 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="10dp"
+    android:layout_margin="20dp"
     android:layout_height="wrap_content"
     app:cardCornerRadius="10dp"
     app:cardElevation="5dp"
-    android:background="@drawable/touch_bg"
+    app:cardBackgroundColor="@android:color/transparent"
     >
     <LinearLayout
         android:id="@+id/ll_item_money"
@@ -14,13 +14,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="5dp"
-        android:background="@drawable/touch_bg"
+        android:background="@android:color/transparent"
         android:gravity="center">
         <TextView
             android:id="@+id/tv_money1"
             android:text="222222"
             android:layout_marginTop="2dp"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="15sp"
             android:lineSpacingExtra="5dp"
             android:layout_marginBottom="5dp"
@@ -37,7 +37,7 @@
             android:id="@+id/tv_money2"
             android:text="222222"
             android:layout_marginTop="5dp"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:textSize="15sp"
             android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
@@ -55,6 +55,7 @@
             android:layout_marginTop="2dp"
             android:layout_gravity="right"
             android:maxLength="10"
+            android:textColor="@android:color/holo_green_dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
     </LinearLayout>
