--- a/app/src/main/res/layout/item_notelist.xml
+++ b/app/src/main/res/layout/item_notelist.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_notetitle"
-            android:textSize="16sp"
+            android:textSize="18sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@android:color/black"
@@ -30,7 +30,7 @@
             android:textSize="@dimen/text_date"
             android:id="@+id/tv_date"
             android:layout_alignParentRight="true"
-            android:textColor="@android:color/holo_blue_light"
+            android:textColor="@android:color/holo_green_dark"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingLeft="10dp"
@@ -40,11 +40,12 @@
 
 <TextView
     android:id="@+id/tv_note"
-    android:textSize="14sp"
+    android:textSize="16sp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:ellipsize="end"
+    android:textColor="@android:color/white"
     android:lineSpacingExtra="2dp"
     android:lines="3"
     android:paddingLeft="10dp"
