--- a/app/src/main/res/layout/item_shouye_note.xml
+++ b/app/src/main/res/layout/item_shouye_note.xml
@@ -15,7 +15,7 @@
             android:textSize="16sp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@android:color/black"
+            android:textColor="@android:color/white"
             android:lines="1"
             android:text="1"/>
         <TextView
