--- a/app/src/main/res/layout/activity_changeperson.xml
+++ b/app/src/main/res/layout/activity_changeperson.xml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@mipmap/newbk">
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolBar_changeperson"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="@android:color/holo_blue_light">
+        android:background="#2fffffff"
+        android:gravity="center">
 
-        <FrameLayout
-            android:layout_width="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_height="match_parent">
-            <ImageView
-                android:src="@mipmap/toolbarbk"
-                android:layout_gravity="center"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
                 android:gravity="center"
-                android:text="记 忆 +"
+                android:text="记忆+"
                 android:textSize="18sp"
                 android:textColor="@android:color/white"/>
-        </FrameLayout>
+
     </android.support.v7.widget.Toolbar>
 <RelativeLayout
     android:orientation="horizontal"
@@ -36,22 +28,22 @@
     android:layout_height="wrap_content">
     <TextView
         android:text=" 昵称"
-        android:paddingTop="20dp"
+        android:paddingTop="15dp"
         android:layout_gravity="center_vertical"
         android:paddingLeft="10dp"
         android:textSize="20sp"
-        android:paddingBottom="20dp"
+        android:paddingBottom="15dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <EditText
         android:id="@+id/tv_changeperson"
         android:layout_alignParentRight="true"
-        android:paddingTop="20dp"
+        android:paddingTop="15dp"
         android:paddingRight="5dp"
         android:text="hahaha "
         android:layout_marginRight="10dp"
         android:background="@null"
-        android:paddingBottom="20dp"
+        android:paddingBottom="15dp"
         android:layout_gravity="center_vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
