--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:padding="10dp"
+    android:id="@+id/ll_daojishi_dialog"
+    android:background="@drawable/linearborder"
     android:layout_height="match_parent">
 <TextView
     android:layout_width="wrap_content"
