--- a/app/src/main/res/layout/activity_notelist.xml
+++ b/app/src/main/res/layout/activity_notelist.xml
@@ -24,7 +24,7 @@
         android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-    <android.support.v7.widget.RecyclerView
+    <com.example.xz.weiji.View.LeftSwipeMenuRecyclerView
         android:id="@+id/rclv_list"
         android:layout_marginBottom="15dp"
         android:layout_width="match_parent"
