--- a/app/src/main/res/layout/avtivity_firstpage.xml
+++ b/app/src/main/res/layout/avtivity_firstpage.xml
@@ -15,6 +15,7 @@
         android:layout_height="?attr/actionBarSize">
         <de.hdodenhof.circleimageview.CircleImageView
             android:src="@mipmap/icon"
+            android:id="@+id/iv_firstpage_head"
             app:border_color="@android:color/white"
             android:paddingLeft="10dp"
             app:border_width="1dp"
