--- a/app/src/main/res/layout/item_daojishi.xml
+++ b/app/src/main/res/layout/item_daojishi.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:orientation="horizontal"
     android:layout_margin="20dp"
-    app:cardCornerRadius="10dp"
-    android:background="@android:color/white"
-    app:cardPreventCornerOverlap="false">
+    android:id="@+id/ll_daojishi_listitem"
+    android:background="@drawable/cardview_radious_bottom">
     <LinearLayout
         android:orientation="vertical"
-        android:id="@+id/ll_daojishi_listitem"
-        android:layout_marginTop="15dp"
-        android:layout_marginBottom="15dp"
+
+        android:layout_marginTop="13dp"
+        android:layout_marginBottom="13dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -47,4 +47,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     </LinearLayout>
-</android.support.v7.widget.CardView>
+    <LinearLayout
+        android:id="@+id/ll_daojishi_star"
+        android:orientation="vertical"
+        android:background="@android:color/holo_red_light"
+        android:layout_width="0dp"
+        android:gravity="center"
+        android:layout_height="match_parent">
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/ll__daojishi_delete"
+        android:background="@drawable/cardview_radious_top"
+        android:layout_width="50dp"
+        android:gravity="center"
+        android:layout_height="match_parent">
+        <ImageView
+            android:layout_gravity="center"
+            android:src="@drawable/trash"
+            android:id="@+id/tvDelete"
+            android:layout_width="30dp"
+            android:layout_height="30dp" />
+    </LinearLayout>
+</LinearLayout>
