--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,6 +28,11 @@
         <item name="android:windowExitAnimation">@animator/dialog_exit</item>
     </style>
 
+    <style name="mydialog">
+        <item name="android:windowEnterAnimation">@anim/dialog_in</item>
+        <item name="android:windowExitAnimation">@anim/dialog_out</item>
+    </style>
+
 
     <style name="transparentText" parent="TextAppearance.AppCompat.Small">
     <item name="android:textColor">#00000000</item>
