加入友盟统计功能，TO DO:对模块进行组件化

--- a/app/src/main/res/anim/dialog_in.xml
+++ b/app/src/main/res/anim/dialog_in.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <translate xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:duration="500"
     android:fromXDelta="0"
+    android:fromYDelta="1000"
     android:toXDelta="0"
-    android:fromYDelta="-100%p"
-    android:interpolator="@android:anim/bounce_interpolator"
-    android:toYDelta="0%p"
-    android:duration="3000">
+    android:toYDelta="0">
 </translate>
