--- a/module_app/src/main/res/layout/dialog_daojishi.xml
+++ b/module_app/src/main/res/layout/dialog_daojishi.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/ll_daojishi_dialog"
     android:gravity="center"
     >
     <ImageView
