[bug]1.笔记图片加载默认图片显示不出问题修复2.编辑页面单击空白区域弹不出输入法3.编辑笔记界面返回笔记列表刷新还未完成时单击会崩溃bug

--- a/lib_xrichtext/src/main/res/layout/edit_imageview.xml
+++ b/lib_xrichtext/src/main/res/layout/edit_imageview.xml
@@ -6,8 +6,9 @@
     <com.sendtion.xrichtext.DataImageView
         android:id="@+id/edit_imageView"
         android:layout_width="match_parent"
+        android:src="@drawable/new_img_loading"
         android:layout_height="wrap_content"
-        android:scaleType="fitXY" />
+        android:scaleType="fitXY"/>
 
     <ImageView
         android:id="@+id/image_close"
