--- a/module_app/src/main/res/layout/activity_edittext.xml
+++ b/module_app/src/main/res/layout/activity_edittext.xml
@@ -40,12 +40,20 @@
         toolbar:met_floatingLabel="highlight"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/ll_editcontent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-    <com.sendtion.xrichtext.RichTextEditor
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:animateLayoutChanges="true"
-        android:textSize="16sp"
-        android:id="@+id/et_text"/>
+            <com.sendtion.xrichtext.RichTextEditor
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:animateLayoutChanges="true"
+                android:textSize="16sp"
+                android:id="@+id/et_text"/>
+
+        </LinearLayout>
+
     </LinearLayout>
 </LinearLayout>
