--- a/module_app/src/main/res/layout/item_notelist.xml
+++ b/module_app/src/main/res/layout/item_notelist.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -16,15 +16,12 @@
         android:layout_height="wrap_content">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:gravity="center"
-        android:layout_height="wrap_content">
+
         <LinearLayout
             android:orientation="horizontal"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:layout_marginTop="10dp"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <TextView
                 android:background="@drawable/circlebackground"
@@ -34,7 +31,7 @@
             <TextView
                 android:id="@+id/tv_notetitle"
                 android:textSize="15sp"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@android:color/white"
                 android:ellipsize="end"
@@ -44,32 +41,49 @@
                 android:text="1"/>
         </LinearLayout>
 
-
-    </RelativeLayout>
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
     <TextView
         android:text="1"
         android:layout_marginTop="10dp"
         android:textSize="@dimen/text_date"
         android:id="@+id/tv_date"
+        android:layout_toLeftOf="@id/iv_note"
         android:textColor="@android:color/white"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingLeft="10dp"
+        android:layout_marginRight="20dp"
         android:maxLength="16"
         android:paddingRight="10dp" />
-<TextView
-    android:id="@+id/tv_note"
-    android:textSize="14sp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center_vertical"
-    android:ellipsize="end"
-    android:textColor="@android:color/white"
-    android:lineSpacingExtra="2dp"
-    android:lines="3"
-    android:paddingLeft="10dp"
-    android:paddingBottom="10dp"
-    android:text="1"/>
+    <TextView
+        android:id="@+id/tv_note"
+        android:textSize="14sp"
+        android:layout_below="@id/tv_date"
+        android:layout_toLeftOf="@id/iv_note"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:ellipsize="end"
+        android:textColor="@android:color/white"
+        android:lineSpacingExtra="2dp"
+        android:lines="3"
+        android:paddingLeft="10dp"
+        android:paddingBottom="10dp"
+        android:layout_marginRight="20dp"
+        android:text="1"/>
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="10dp"
+        android:id="@+id/iv_note"
+        android:layout_gravity="center_vertical"
+        android:layout_width="70dp"
+        app:border_color="@android:color/white"
+        app:border_width="1dp"
+        android:layout_height="70dp" />
+</RelativeLayout>
+
     </LinearLayout>
     <LinearLayout
         android:id="@+id/ll_star"
